--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ go.work
 /Godeps/
 
 # End of https://www.toptal.com/developers/gitignore/api/go
+defaults
+cloudflareddns
+.gitignore
+cloudflareddns-arm
